fixed layout problems from merge

--- a/site/styles/index.css
+++ b/site/styles/index.css
@@ -102,8 +102,8 @@ article {
     }
     
     .about-member-text {
-        margin: 0 0 0 10px;
-        width: 50%;
+        margin: 0 10px 0 10px;
+        width: 80%;
     
     }
     
